examples/__outputs__/10_transport-http/transport-http_extension_headers__dynamicHeaders.output.test.txt
/some/path/to/runPipeline.ts:XX
          return new ContextualError(message, { hookName: signal.hookName, source: signal.source }, signal.error)
                 ^


ContextualError: There was an error in the core implementation of hook "exchange".
    at runPipeline (/some/path/to/runPipeline.ts:XX:18)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async runPipeline (/some/path/to/runPipeline.ts:XX:14)
    at async runPipeline (/some/path/to/runPipeline.ts:XX:14)
    at async <anonymous> (/some/path/to/runner.ts:XX:20)
    at async Module.run (/some/path/to/run.ts:XX:10)
    at async sendRequest (/some/path/to/send.ts:XX:18)
    at async <anonymous> (/some/path/to/transport-http_extension_headers__dynamicHeaders.ts:XX:1) {
  cause: TypeError: fetch failed
      at node:internal/deps/undici/undici:13510:13
      at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
      at async Object.run (/some/path/to/TransportHttp.ts:XX:28)
      at async runStep (/some/path/to/runStep.ts:XX:16) {
    [cause]: AggregateError [ECONNREFUSED]: 
        at internalConnectMultiple (node:net:1134:18)
        at afterConnectMultiple (node:net:1715:7) {
      code: 'ECONNREFUSED',
      [errors]: [
        Error: connect ECONNREFUSED ::1:3000
            at createConnectionError (node:net:1678:14)
            at afterConnectMultiple (node:net:1708:16) {
          errno: -61,
          code: 'ECONNREFUSED',
          syscall: 'connect',
          address: '::1',
          port: 3000
        },
        Error: connect ECONNREFUSED 127.0.0.1:3000
            at createConnectionError (node:net:1678:14)
            at afterConnectMultiple (node:net:1708:16) {
          errno: -61,
          code: 'ECONNREFUSED',
          syscall: 'connect',
          address: '127.0.0.1',
          port: 3000
        }
      ]
    }
  },
  context: { hookName: 'exchange', source: 'implementation' }
}

Node.js vXX.XX.XX